# tensorrt_tutorials

./: .gitignore  run_docker.sh
docker/: Dockerfile
nvidia_tftrt_blog_sample/: README  README.md
nvidia_tftrt_dli_resource/: README.md  common.py  import_pb_to_tensorboard.py  test_ball_detection.py  test_ball_detection_restore.py  test_detection.py  test_pet_detection.py  test_pet_detection_restore.py
nvidia_tftrt_dli_resource/ball_models/: ball_label_map.pbtxt
nvidia_tftrt_dli_resource/classification/examples/classification/: classification.ipynb
nvidia_tftrt_dli_resource/tensorrt/: classification_helper.py  model_config.json  model_config_int8.json  object_detection.py
tensorrt6/data/mnist/: README.md  generate_pgms.py
tensorrt6/python/: graphsurgeon-tf_6.0.1-1+cuda10.1_amd64.deb  python_setup.sh  uff-converter-tf_6.0.1-1+cuda10.1_amd64.deb
tensorrt6_from_uff/: Makefile  Makefile.config
tensorrt6_from_uff/common/: buffers.h
tensorrt6_from_uff/pyinfer/: run_infer_geforcertx2080ti_fp32.sh  run_infer_geforcertx2080ti_int8_chw4.sh
tensorrt6_from_uff/pyinfer/code/common/: system_list.py
tensorrt6_from_uff/pyinfer/code/ssd-small/tensorrt/: infer.py
tensorrt6_from_uff/sampleMobilenetV1/: Makefile  sampleMobilenetV1.cpp
tensorrt_from_uff/: convert_uff.py
tensorrt_from_uff/plugin/: CMakeLists.txt
tensorrt_from_uff/plugin/castPlugin/: CMakeLists.txt  Cast.cpp
tensorrt_from_uff/plugin/flattenConcatPlugin/: CMakeLists.txt
tensorrt_from_uff/plugin/gridAnchorPlugin/: CMakeLists.txt  gridAnchorPlugin.cpp
utils/scripts/: import_pb_to_tensorboard.py  pb_to_pbtxt.py
